--- a/templates/login.html
+++ b/templates/login.html
@@ -57,6 +57,9 @@
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
+					  </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:manager'%}">平台管理员主页</a>
+					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="">用户主页</a>
                         <!-- RD Navbar Dropdown-->
                         <ul class="rd-menu rd-navbar-dropdown">
