--- a/templates/Index.html
+++ b/templates/Index.html
@@ -56,8 +56,10 @@
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="">用户主页</a>
-                        <!-- RD Navbar Dropdown-->
+					   </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:manager'%}">平台管理员主页</a>
+					  </li>
+					  <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="">用户主页</a>
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 						  </li>
@@ -65,11 +67,10 @@
 						  </li>
 						  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
                         </ul>
-                      </li>
+                      </li> -->
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'spider'%}">获取新闻</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">Pages</a>
-                        <!-- RD Navbar Megamenu-->
+                     <!--  <li class="rd-nav-item"><a class="rd-nav-link" href="#">Pages</a>
                         <ul class="rd-menu rd-navbar-megamenu">
                           <li class="rd-megamenu-item">
                             <h6 class="rd-megamenu-title">Elements</h6>
@@ -112,7 +113,7 @@
                             </ul>
                           </li>
                         </ul>
-                      </li>
+                      </li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'login:login'%}">登录</a>
 					  <!-- RD Navbar Dropdown-->
                         <ul class="rd-menu rd-navbar-dropdown">
@@ -147,7 +148,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-7">
-                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100">Quick & secure<br>web hosting</h1><a class="button button-lg button-secondary" href="about.html" data-caption-animate="fadeInUp" data-caption-delay="150">Learn More</a>
+                    <h1 data-caption-animate="fadeInUp" data-caption-delay="100">云汇评</h1>
                   </div>
                   <div class="swiper-img-block">
                     <div class="swiper-img-block-inner">
