分组完成，未做：平台管理员设置用户权限

--- a/templates/Manager.html
+++ b/templates/Manager.html
@@ -134,6 +134,8 @@ function loadXMLDoc3(obj_id)
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'index'%}">首页</a>
                       </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:main'%}">用户主页</a>
+                      </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
@@ -245,7 +247,8 @@ function loadXMLDoc3(obj_id)
                 <ul class="nav nav-tabs">
                   <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-2-1" data-toggle="tab">新订单</a></li>
 				  <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-2" data-toggle="tab">专家评审订单</a></li>
-				  <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-3" data-toggle="tab">我的信息</a></li>
+				  <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-3" data-toggle="tab">修改用户分组</a></li>
+				  <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-2-4" data-toggle="tab">我的信息</a></li>
                 </ul>
                 <!-- Tab panes-->
                 <div class="tab-content">
@@ -411,9 +414,17 @@ function loadXMLDoc3(obj_id)
 					</ul>
                   </div>
 				  
-				  
-				  
 				  <div class="tab-pane fade" id="tabs-2-3">
+                    <ul class="contact-box">
+                      
+					  TODO
+                      
+                    </ul>
+                  </div>
+				  
+				  
+				  
+				  <div class="tab-pane fade" id="tabs-2-4">
                     <ul class="contact-box">
                       <li>
                         <div class="unit unit-horizontal unit-spacing-xxs">
