--- a/templates/Expert.html
+++ b/templates/Expert.html
@@ -78,13 +78,15 @@ function loadXMLDoc3(obj_id)
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'index'%}">首页</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'index'%}">首页</a>
+                      </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:main'%}">用户主页</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 					  </li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
+					  <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:manager'%}">平台管理员主页</a>
 					  </li>
