完成平台管理员逻辑，todo：异步请求

--- a/templates/Government.html
+++ b/templates/Government.html
@@ -340,7 +340,7 @@ function loadXMLDoc2(formtype,obj_id)
 									  <label class="form-label" for="jicai-per">%</label>
 									</div>
 								
-									<input type="submit" class="button button-secondary" name="submit" value="提交集采订单"">
+									<input type="submit" class="button button-secondary" name="submit" value="提交集采订单">
 						</form>
 		            </ul>
                   </div>
