稍微修改逻辑

--- a/templates/Government.html
+++ b/templates/Government.html
@@ -73,6 +73,12 @@ function loadXMLDoc2(formtype,obj_id)
 	xmlhttp.open("GET",url,true);
 	xmlhttp.send();
 }
+
+<!-- 提交订单、异步刷新页面用 -->
+
+
+
+
 <!-- window.onload=loadXMLDoc1() -->
 
 
